# CellAutoPROJECT

backend/: Cargo.toml
backend/api/: world.rs
backend/automaton/: rule.rs
backend/simulation/: mod.rs
backend/src/: errors.rs  lib.rs  main.rs  presets.rs
backend/src/api/: control.rs  mod.rs
backend/src/automaton/: mod.rs
backend/src/simulation/: simulation.rs
backend/src/world/: chunk.rs  coord.rs  mod.rs  world.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  api.ts  types.ts
