[package]
name = "cellular-automata-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cellular-automata-backend"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }


axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

thiserror = "1.0"
anyhow = "1.0"

rayon = "1.8"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
